Add 'shift + alt + cmd + e' as a shortcut

--- a/sketch-export-sizes-generator.sketchplugin/Contents/Sketch/manifest.json
+++ b/sketch-export-sizes-generator.sketchplugin/Contents/Sketch/manifest.json
@@ -4,7 +4,7 @@
     {
       "script" : "script.cocoascript",
       "handler" : "onRun",
-      "shortcut" : "",
+      "shortcut" : "shift alt cmd e",
       "name" : "Generate Sizes",
       "identifier" : "Generate Sizes"
     }
